--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,13 +7,13 @@
 @use './mixins.scss' as *;
 
 // 导入基础样式
-@use './base.scss';
+@use './base';
 
 // 导入组件样式
-@use './components.scss';
+@use './components';
 
 // 导入工具类
-@use './utilities.scss';
+@use './utilities';
 
 // 导入响应式样式
-@use './responsive.scss';
+@use './responsive';
