--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -6,6 +6,7 @@
 @use './mixins.scss' as *;
 
 // 重置样式
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -18,11 +19,12 @@
 }
 
 // HTML 和 Body
+
 html {
   font-size: 16px;
   line-height: 1.5;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
@@ -33,10 +35,12 @@ body {
   background-color: var(--bg-color-page, $bg-color-page);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   @include transition(color, background-color);
 }
 
 // 标题
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 $spacing-md 0;
   font-weight: 500;
@@ -52,15 +56,18 @@ h5 { font-size: $font-size-medium; }
 h6 { font-size: $font-size-base; }
 
 // 段落
+
 p {
   margin: 0 0 $spacing-md 0;
   color: var(--text-color-regular, $text-color-regular);
 }
 
 // 链接
+
 a {
   color: $primary-color;
   text-decoration: none;
+
   @include transition(color);
 
   &:hover,
@@ -77,6 +84,7 @@ a {
 }
 
 // 列表
+
 ul, ol {
   margin: 0 0 $spacing-md 0;
   padding-left: $spacing-lg;
@@ -87,6 +95,7 @@ li {
 }
 
 // 图片
+
 img {
   max-width: 100%;
   height: auto;
@@ -94,6 +103,7 @@ img {
 }
 
 // 表格
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -114,6 +124,7 @@ th {
 }
 
 // 表单元素
+
 input, button, select, textarea {
   font-family: inherit;
   font-size: inherit;
@@ -124,6 +135,7 @@ button {
   cursor: pointer;
   border: none;
   background: none;
+
   @include transition(all);
 
   &:disabled {
@@ -133,8 +145,9 @@ button {
 }
 
 // 代码
+
 code, pre {
-  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+  font-family: Monaco, Menlo, 'Ubuntu Mono', monospace;
   font-size: 0.875em;
 }
 
@@ -152,7 +165,8 @@ pre {
   border: 1px solid var(--border-color-light, $border-color-light);
   border-radius: $border-radius-md;
   overflow-x: auto;
-  @include scrollbar();
+
+  @include scrollbar;
 
   code {
     padding: 0;
@@ -163,6 +177,7 @@ pre {
 }
 
 // 引用
+
 blockquote {
   margin: 0 0 $spacing-md 0;
   padding: $spacing-md;
@@ -173,6 +188,7 @@ blockquote {
 }
 
 // 水平线
+
 hr {
   margin: $spacing-lg 0;
   border: none;
@@ -186,12 +202,8 @@ hr {
   color: $primary-color;
 }
 
-::-moz-selection {
-  background-color: rgba($primary-color, 0.2);
-  color: $primary-color;
-}
-
 // 滚动条
+
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
@@ -202,21 +214,23 @@ hr {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgb(0 0 0 / 20%);
   border-radius: 4px;
 
   &:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgb(0 0 0 / 30%);
   }
 }
 
 // 暗色主题滚动条
+
 .dark {
+
   ::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgb(255 255 255 / 20%);
 
     &:hover {
-      background-color: rgba(255, 255, 255, 0.3);
+      background-color: rgb(255 255 255 / 30%);
     }
   }
 }
